--- a/project_10/css/register.css
+++ b/project_10/css/register.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .container {
     width: 200px;
     height: 200px;
@@ -15,4 +20,10 @@ body {
     position: relative;
     top: 10%;
     left: 40%;
+}
+
+#showPass1 {
+    position: relative;
+    top: -10%;
+    left: 76%;
 }
